change env & db Path

--- a/.env
+++ b/.env
@@ -15,9 +15,9 @@ APP_BASE_URL=https://21india.in
 APP_NAME=21 INDIA
 
 DATABASE_HOST=localhost
-DATABASE_USER=21india
-DATABASE_PASSWORD=21india
-DATABASE_NAME=21india
+DATABASE_USER=clu
+DATABASE_PASSWORD=clu
+DATABASE_NAME=clu
 
 MINIMUM_MONEY=100 
 
