--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "dotenv": "^16.4.5",
         "ejs": "^3.1.8",
         "express": "^4.17.1",
+        "fs": "0.0.1-security",
         "iconv-lite": "^0.6.3",
         "jsonwebtoken": "^9.0.2",
         "md5": "^2.3.0",
